main page alignment fixes

--- a/src/components/main/thirdCol/todo-list/TodoList.scss
+++ b/src/components/main/thirdCol/todo-list/TodoList.scss
@@ -1,6 +1,6 @@
 .todo-list {
     .inserted-elements-list {
-        height: 16rem;
+        height: 10rem;
         overflow-x: hidden;
         overflow-y: scroll;
     }
